# hwhal-n950-n9

./: CMakeLists.txt  displayhal.cpp  displayhal.h  infohal.cpp  infohal.h  lightshal.cpp  lightshal.h  plugin.cpp  sensorshal.cpp  sensorshal.h  sysfs.cpp  sysfs.h  usbhal.cpp  usbhal.h
debian/: changelog  control  hwhal-n950-n9.install  rules
